// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressIndicator overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  height: 4px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: #5c6ac4;
  background-color: #f6f6f6;
  border-radius: 9999px;
  border: none;
  color: #154153;
}

.emotion-1::-webkit-progress-bar {
  background-color: transparent;
}

.emotion-1::-webkit-progress-value {
  background-color: currentcolor;
}

.emotion-1::-moz-progress-bar {
  background-color: currentcolor;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 12px;
}

<div
    style="width: 100%;"
  >
    <div
      class="emotion-0"
    >
      <progress
        class="emotion-1"
        max="13"
        value="4"
      />
      <span
        class="emotion-2"
      >
        4
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressIndicator overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  height: 4px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: #5c6ac4;
  background-color: #f6f6f6;
  border-radius: 9999px;
  border: none;
  color: #0d4106;
}

.emotion-1::-webkit-progress-bar {
  background-color: transparent;
}

.emotion-1::-webkit-progress-value {
  background-color: currentcolor;
}

.emotion-1::-moz-progress-bar {
  background-color: currentcolor;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 12px;
}

<div
    style="width: 100%;"
  >
    <div
      class="emotion-0"
    >
      <progress
        class="emotion-1"
        max="7"
        value="2"
      />
      <span
        class="emotion-2"
      >
        2
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressIndicator overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  height: 4px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: #5c6ac4;
  background-color: #f6f6f6;
  border-radius: 9999px;
  border: none;
  color: #5e2519;
}

.emotion-1::-webkit-progress-bar {
  background-color: transparent;
}

.emotion-1::-webkit-progress-value {
  background-color: currentcolor;
}

.emotion-1::-moz-progress-bar {
  background-color: currentcolor;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 12px;
}

<div
    style="width: 100%;"
  >
    <div
      class="emotion-0"
    >
      <progress
        class="emotion-1"
        max="12"
        value="2"
      />
      <span
        class="emotion-2"
      >
        2
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressIndicator overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  height: 4px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: #5c6ac4;
  background-color: #f6f6f6;
  border-radius: 9999px;
  border: none;
  color: #650179;
}

.emotion-1::-webkit-progress-bar {
  background-color: transparent;
}

.emotion-1::-webkit-progress-value {
  background-color: currentcolor;
}

.emotion-1::-moz-progress-bar {
  background-color: currentcolor;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 12px;
}

<div
    style="width: 100%;"
  >
    <div
      class="emotion-0"
    >
      <progress
        class="emotion-1"
        max="15"
        value="4"
      />
      <span
        class="emotion-2"
      >
        4
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressIndicator overview 5 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  height: 4px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: #5c6ac4;
  background-color: #f6f6f6;
  border-radius: 9999px;
  border: none;
  color: #6c4d4a;
}

.emotion-1::-webkit-progress-bar {
  background-color: transparent;
}

.emotion-1::-webkit-progress-value {
  background-color: currentcolor;
}

.emotion-1::-moz-progress-bar {
  background-color: currentcolor;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 12px;
}

<div
    style="width: 100%;"
  >
    <div
      class="emotion-0"
    >
      <progress
        class="emotion-1"
        max="18"
        value="1"
      />
      <span
        class="emotion-2"
      >
        1
      </span>
    </div>
  </div>
</DocumentFragment>
`;
